--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ body {
   display: flex;
 }
 
+/* Container principal */
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
 /* Sidebar */
 .sidebar {
   width: 220px;
